--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,7 +10,7 @@
 }
 html,
 body,
-__next {
+#__next {
   height: 100%;
   padding: 0;
   margin: 0;
@@ -29,7 +29,7 @@ a {
 
 .neomorphism {
   box-shadow: 0.25rem 0.25rem 1rem 0 rgba(255, 255, 255, 0.3) inset,
-    -2.5rem -2.5rem 1rem 0 rgba(0, 0, 0, 0.25) inset;
+    -0.25rem -0.25rem 1rem 0 rgba(0, 0, 0, 0.25) inset;
 }
 
 @media (prefers-color-scheme: dark) {
