--- a/assets/css/main_one.css
+++ b/assets/css/main_one.css
@@ -7,10 +7,10 @@
  */
 * {
   user-select: none;
+  box-sizing: border-box;
 }
 html {
   font-family: "Roboto", sans-serif;
-  /*font-family: Georgia, 'Roboto', sans-serif;*/
   font-size: 15px;
 }
 
