--- a/assets/css/main_one.css
+++ b/assets/css/main_one.css
@@ -442,26 +442,31 @@ ul li {
 .speaker {
   text-align: center;
   color: #313131;
-  text-transform: uppercase;
-  margin: 10px 0;
-}
-.speaker h5 {
-  /* margin-top: 5px; */
-  margin-bottom: 10px;
-}
-.speaker p {
-  margin-bottom: 5px;
+  display: flex;
+  gap: 0.25rem;
+  flex-direction: column;
+  /* text-transform: uppercase; */
+}.speaker-row{
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .speaker img:hover {
   opacity: 0.7;
 }
-.speaker_name {
+.speaker_name{
+  display: flex;
+  flex-direction: column;
+  gap: 0.123rem;
   text-align: center;
-  color: #1a1a1aaa;
+  align-items: center;
+  justify-content: center;
+  font-weight: 500;
+}
+.speaker_name p{
+  text-align: center;
   font-size: 12px;
-  font-weight: 600;
-  text-transform: uppercase;
-  margin: 10px 0;
+  font-weight: 500;
 }
 
 /* 
