hits logo changed

--- a/assets/css/main_one.css
+++ b/assets/css/main_one.css
@@ -557,7 +557,7 @@ ul li {
   opacity: 1;
 }
 .partner .partner-box-anro {
-  background: url(../images/partner/anro.png) no-repeat center center/contain;
+  background: url(../images/partner/hits.png) no-repeat center center/contain;
 }
 .partner .partner-box-rae {
   background: url(../images/partner/rae.png) no-repeat center center/contain;
