--- a/assets/css/main_one.css
+++ b/assets/css/main_one.css
@@ -445,11 +445,18 @@ ul li {
   display: flex;
   gap: 0.25rem;
   flex-direction: column;
+  align-items: center;
+  justify-content: center;
   /* text-transform: uppercase; */
 }.speaker-row{
   display: flex;
   justify-content: center;
   align-items: center;
+}
+.speaker img{
+  height: 120px;
+  width: 120px;
+  border-radius: 100vh;
 }
 .speaker img:hover {
   opacity: 0.7;
