--- a/assets/css/main_one.css
+++ b/assets/css/main_one.css
@@ -495,7 +495,8 @@ ul li {
   position: relative;
   background-color: #3d3d3d;
   color: #fff;
-  text-align: center;
+  width: 70%;
+  /* text-align: center; */
   padding: 15px;
   margin: 15px 0 0;
 }
@@ -503,7 +504,7 @@ ul li {
   font-size: 22px;
   font-weight: 600;
   color: #ffffff;
-  text-align: center;
+  /* text-align: center; */
   line-height: 52px;
   text-decoration: underline;
 }
